fixed layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 .overlay{
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   z-index: 5;
   background-color: rgba(35, 26, 16, 0.8);
 }
